--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -82,8 +82,8 @@
 							    <th nowrap>
 							      写真
 							    </th>
-							    <td th:src="@{/img/employee.image}">
-							      <img src="../../static/img/e2.png">
+							    <td>
+							      <img src="../../static/img/e2.png" th:src="@{/img/} + ${employee.image}">
 							    </td>
 							  </tr>
 							  <tr>
